# roo-ecs

./: CMakeLists.txt  README.md  main.cpp
src/: Component.cpp  Component.h  Entity.cpp  Entity.h  Manager.cpp  Manager.h
src/Components/: SpriteRenderer.cpp  SpriteRenderer.h  Vehicle.cpp  Vehicle.h
src/Entities/: Person.cpp  Person.h  Vehicle.cpp  Vehicle.h
